# cache-simulator

./: .gitignore  CMakeLists.txt  README.md
cache_configs/: config0.json
include/: AccessType.h  AllocationPolicies.h  Application.h  CacheBlock.h  CacheConfig.h  CacheHierarchy.h  CacheLevel.h  CacheSet.h  CacheStatistics.h  FIFOPolicy.h  LRUPolicy.h  MemoryAccess.h  MemoryAddress.h  MemorySystem.h  NoWriteAllocatePolicy.h  Parser.hpp  Policies.h  RandomPolicy.h  Utils.h  WriteAllocatePolicy.h  WriteBackPolicy.h  WriteThroughPolicy.h
src/: AllocationPolicies.cpp  Application.cpp  CacheBlock.cpp  CacheHierarchy.cpp  CacheLevel.cpp  CacheSet.cpp  CacheStatistics.cpp  FIFOPolicy.cpp  LRUPolicy.cpp  MemoryAddress.cpp  MemorySystem.cpp  Policies.cpp  RandomPolicy.cpp  Utils.cpp  WriteBackPolicy.cpp  WriteThroughPolicy.cpp  main.cpp
tests/: CacheBlockTest.cpp  CacheLevelTest.cpp  CacheSetTest.cpp  CacheStatisticsTest.cpp  CacheTest.cpp  UtilsTest.cpp
traces/: trace0.txt
